--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 /venv/
+/.idea/.gitignore
+/.idea/discord.xml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/projekt.iml
+/.idea/vcs.xml
